# botorch

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: deploy_on_release.yml  docs.yml  lint.yml  nightly.yml  publish_website.yml  reusable_test.yml  reusable_tutorials.yml  test_stable.yml  update_tutorials.yml
botorch/: __init__.py  cross_validation.py  fit.py
botorch/acquisition/: __init__.py  active_learning.py  analytic.py  bayesian_active_learning.py  cached_cholesky.py  factory.py  fixed_feature.py  input_constructors.py  joint_entropy_search.py  max_value_entropy_search.py  multioutput_acquisition.py  objective.py  penalized.py  preference.py  probabilistic_reparameterization.py  proximal.py  thompson_sampling.py  utils.py
botorch/csrc/: logei_fused.cpp
botorch/exceptions/: __init__.py  warnings.py
botorch/generation/: __init__.py  gen.py  utils.py
botorch/models/: __init__.py  additive_gp.py  approximate_gp.py  classifier.py  contextual_multioutput.py  deterministic.py  fully_bayesian.py  fully_bayesian_multitask.py  gp_regression_fidelity.py  gpytorch.py  heterogeneous_mtgp.py  higher_order_gp.py  latent_kronecker_gp.py  map_saas.py  model.py  multitask.py  pairwise_gp.py  relevance_pursuit.py  robust_relevance_pursuit_model.py  target_aware_gp.py
botorch/optim/: __init__.py  batched_lbfgs_b.py  core.py  fit.py  homotopy.py  initializers.py  optimize.py  optimize_homotopy.py  optimize_mixed.py  parameter_constraints.py
botorch/posteriors/: __init__.py  fully_bayesian.py  latent_kronecker.py
botorch/sampling/: __init__.py  qmc.py
botorch/test_functions/: __init__.py  base.py  multi_fidelity.py  (+3 more)
docs/: batching.md  optimization.md
notebooks/: transfer_learning_stack_demo.ipynb
notebooks_community/: README.md
scripts/: run_tutorials.py
test/: test_cross_validation.py  test_fit.py
website/: docusaurus.config.js  notebooks_community.json  package.json  tutorials.json  versions.json
(+251 files in other folders)
